# tgbot-mastodon-sync

./: .gitignore  .gitmodules  Cargo.toml  README.md  sqlx-data.json
.github/workflows/: CI.yml
migrations/: 20230123122541_sqlite.sql  20230123165823_sqlite.sql  20230126183519_sqlite.sql
src/: cmd.rs  config.rs  db.rs  lib.rs  main.rs  mastodon.rs
src/cmd/: arg.rs  mod.rs
src/handler/: auth.rs  broadcast.rs  debug.rs  mod.rs  ping.rs  post.rs  start.rs
src/util/: handle.rs  media.rs  mod.rs  msg.rs  progmsg.rs  text.rs
