[package]
name = "tgbot-mastodon-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"

[dependencies]
anyhow = "1.0.68"
const_format = "0.2.30"
dptree = "0.3.0"
mastodon-async = "1.0.3"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
spdlog-rs = "0.3.7"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
teloxide = { version = "0.12.0", features = ["macros"] }
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
