[package]
name = "tgbot-mastodon-sync"
version = "0.1.0"
edition = "2021"
description = "A Telegram bot synchronizes Telegram messages to Mastodon"
repository = "https://github.com/SpriteOvO/tgbot-mastodon-sync"
license = "AGPL-3.0-only"
keywords = ["telegram", "mastodon", "bot", "bridge", "forward"]
categories = ["accessibility"]

[lib]
name = "core"

[dependencies]
anyhow = "1.0.69"
const_format = "0.2.30"
dirs = "4.0.0"
dptree = "0.3.0"
lingua = "1.4.0"
mastodon-async = "1.1.0"
once_cell = "1.17.0"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
spdlog-rs = "0.3.8"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
teloxide = { version = "0.12.0", features = ["macros"] }
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros"] }
